--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ h1 {
 
     position: absolute;
     color: white;
-    width: 153px;
-    height: 43px;
+    width: 160px;
+    height: 53px;
     background-color: #21b573;
     border-radius: 30px;
 }
@@ -74,7 +74,7 @@ h1 {
 .icon1 {
     
     padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(146, 144, 144, 0.2), 0 6px 10px 0 rgba(196, 193, 193, 0.19);
     text-align: center;
 
 }
@@ -82,4 +82,25 @@ h1 {
 .container {
 
     margin-bottom: 50px;
+}
+
+.buy-course {
+
+    color: white;
+    background-color:#21b573 ;
+    border-radius: 33px;
+    width: 130px;
+    padding: 10px;
+}
+
+.man {
+
+    width: 100px;
+    margin-left: 180px;
+}
+
+.testmonail {
+
+    text-align: center;
+    margin-bottom: 20px;
 }
