--- a/style.css
+++ b/style.css
@@ -64,16 +64,23 @@ h1 {
     text-align: center;
 }
 
-.icon1 img{
+.icon-img img{
 
     width: 150px;
     padding: 30px;
     
 }
 
-.icon1 {
+.icon1, .icon3, .icon4 {
+
+    background-color:#ffffff;
+    padding: 10px;
+    text-align: center;
+}
+
+.icon2 {
     
-    padding: 20px;
+    padding: 10px;
     box-shadow: 0 4px 8px 0 rgba(146, 144, 144, 0.2), 0 6px 10px 0 rgba(196, 193, 193, 0.19);
     text-align: center;
 
