--- a/style.css
+++ b/style.css
@@ -61,7 +61,9 @@ h1 {
     background-color:#21b573 ;
     border-radius: 33px;
     width: 100px;
+    height: 30px;
     text-align: center;
+    border: none;
 }
 
 .icon-img img{
