--- a/style.css
+++ b/style.css
@@ -21,10 +21,14 @@ h2 {
     
     background-color:#21b573 ;
     border-radius: 33px;
-    padding: 5px 20px;
+    padding: 2px 25px;
     
 }
 
+.sing-in:hover{
+
+    background-color: orangered;
+}
 
 .bg-color {
 
@@ -57,6 +61,10 @@ h2 {
     border-radius: 30px;
 }
 
+.get-started:hover{
+
+    background-color: orangered;
+}
 .Illustration {
 
     height: 350px;
@@ -109,6 +117,10 @@ h2 {
     padding: 10px;
 }
 
+.buy-course:hover{
+
+    background-color: orangered;
+}
 .calendar , .people {
 
     margin-right: 20px;
